src/cssStyling/TopicsBar.css
.topics-bar {
  display: flex;
  justify-content: "space-around";
  align-items: center;
  flex-direction: row;
  vertical-align: middle;
  margin-right: 5vw;
  margin-left: 4vw;
  width: 100%;
  height: 10vh;
  overflow-y: scroll;
  border-left: orange 1px dashed;
}

.topics-h3 {
  margin: 3vh 2vh 2vh 2vh;
  font-size: 3vh;
  justify-content: center;
}

.topic-card {
  border-radius: 10px;
  background-color: bisque;
  border: 3px solid var(--primary-color);
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin: 0.5vh 2vh;
  padding: 1.5vw;
  transition: 0.3s ease-in-out;
}
.topic-card:hover {
  background-color: orange;
}

.topic-card-link {
  text-decoration: none;
}

.topic-title > h2 {
  display: flex;
  justify-content: center;
  width: 90%;
  margin: 0 5%;
  font-size: 8vh;
  margin-top: 2%;
  margin-bottom: 2%;
  transition: 0.3s ease-in-out;
  color: orange;
}

@media screen and (min-width: 280px) and (max-width: 1080px) {
  .topic-card {
    margin: 2vh;
    padding: 3vw;
  }
}

